<resources>
    <string name="app_name">TheExpenseBook</string>
    <string name="title_activity_registration">RegistrationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="income">Income</string>
    <string name="_0_000000">0.000000</string>
    <string name="profit">Profit</string>
    <string name="logout">Logout</string>

    <string name="calculator">Calculator</string>
    <string name="c">C</string>
    <string name="modulo">%</string>
    <string name="x">X</string>
    <string name="divide">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="multiply">*</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="minus">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="plus">+</string>
    <string name="_00">00</string>
    <string name="_0">0</string>
    <string name="point">.</string>
    <string name="equals">=</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="principal_amount">Principal Amount</string>
    <string name="currency_calculator">Currency Calculator</string>
    <string name="monthly_deposit">Monthly Deposit</string>
    <string name="months">Months</string>
    <string name="annual_interest_rate">Annual Interest Rate(%)</string>
</resources>