<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_page_background"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".InterestCalculatorActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:elevation="20dp"
            app:cardBackgroundColor="@color/black"
            app:cardCornerRadius="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:text="@string/currency_calculator"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/principal_amount"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_credentials"
                            android:hint="@string/principal_amount"
                            android:inputType="numberDecimal"
                            android:textColorHint="#17DC1F" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/monthly_deposit"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_credentials"
                            android:hint="@string/monthly_deposit"
                            android:inputType="numberDecimal"
                            android:textColorHint="#3F51B5" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/months"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_credentials"
                            android:hint="@string/months"
                            android:textColor="@color/black"
                            android:inputType="numberDecimal"
                            android:textColorHint="#3F51B5" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="15dp">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/interest_rates"
                            android:textColor="@color/black"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/login_credentials"
                            android:hint="@string/annual_interest_rate"
                            android:inputType="numberDecimal"
                            android:textColorHint="#3F51B5" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/calculate"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Calculate"
                        android:layout_margin="20dp"
                        />

                    <TextView
                        android:text="Principal: "
                        android:layout_marginStart="10dp"
                        android:id="@+id/total_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_marginStart="10dp"
                        android:text="Interest: "
                        android:id="@+id/interest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_marginStart="10dp"
                        android:text="Maturity Balance: "
                        android:id="@+id/maturity"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:textSize="18sp"/>
                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </ScrollView>

</LinearLayout>